Fixed large images overflowing page

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ code { border: 1px solid #eee; border-radius: 0.25em; padding: 0.3em 0.2em 0 0.2
 code a { color:black; }
 figure { width: 100%; text-align: center; margin: 0;}
 figcaption { font-style: italic; }
-img { margin-left: auto; margin-right: auto; }
+img { max-width: 100%; margin-left: auto; margin-right: auto; }
 #wrapper { max-width: 40em; min-width: 10em; padding: 1em 10% 1em 10%; margin: auto; }
 .footnotes { font-size: 0.8em; line-height: 1.3em; margin-top: 1.0em; }
 .footnote-ref, .footnote-back { text-decoration: none; }
